# PointCloud

./: .gitignore  PointCloud.md  auto-number-title.css  readme.md
seedformer_backup/: fps_test.py  key_point_net.py  knn_test.py  manager.py  manager_seed_kp.py  manager_seed_kp_v0.4.py  model.py  model_addkp.py  model_addkp_v0.2.py  model_addkp_v0.3.py  model_addkp_v0.4.py  model_addkp_v0.5.py  model_kp_3dgs_0.7.py  model_kp_3dgs_v0.2.py  model_kp_3dgs_v0.3.py  model_kp_3dgs_v0.42.py  model_kp_3dgs_v0.5.py  model_kp_3dgs_v0.60.py  model_kp_3dgs_v0.61.py  model_kp_3dgs_v0.70.py  model_kp_3dgs_v0.71.py  model_kp_3dgs_v0.80.py  test_kp3dgs_shapenet55.py  test_kp3dgs_shapenet55_vis.py  test_kp_shapenet55.py  train_kp3dgs_shapenet55.py  train_kp3dgs_shapenet55_v0.3.py  train_kp3dgs_shapenet55_v0.61.py  train_kp3dgs_shapenet55_v0.70.py  train_kp3dgs_shapenet55_v0.71.py  train_kp3dgs_shapenet55_v0.80.py  train_kp_shapenet55.py  train_pcn.py  train_seed_kp_pcn.py  train_seed_kp_shapenet55.py  train_seed_kp_shapenet55_v0.4.py  train_shapenet55.py
seedformer_backup/result/train_shapenet55_Log_2024_09_07_01_16_07/: args_training.pth  config.json  test_py.txt  testing.txt
seedformer_backup/test/train_shapenet55_Log_2024_09_07_01_16_07/ShapeNet-55/median/: testing.txt  training.txt
src/PCL_learn/: CMakeLists.txt
src/PCL_learn/RANSAC/: ball.cpp  cylinder.cpp  line.cpp  multi_line.cpp  plane.cpp
src/PCL_learn/filter/: denoise.cpp  indices.cpp  pass_through.cpp  voxel_grid.cpp
src/PCL_learn/kmeans/: kmeans.h  kmeans_main.cpp
src/PCL_learn/pca/: normals.cpp  pca.cpp
src/PCL_learn/src/: kdTree_write.cpp  kmeans.cpp  kmeans.h  kmeans_main.cpp  pcd_viewer.cpp  pcd_viewer.h  readpcd.cpp
src/PCL_learn/utils/: correspondence_grouping.cpp  pcd_viewer.cpp  pcd_viewer.h  txt2pcd.cpp
src/motion_compensation/: CMakeLists.txt  package.xml
src/motion_compensation/src/: motion_comp_node.cpp  preprocess.cpp  preprocess.h
